# investment-funnel

./: .gitignore  .pre-commit-config.yaml  .vercelignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CVaRmodel.py  CVaRtargets.py  Dash_app.py  Dash_components.py  Dash_layouts.py  Dockerfile  LICENSE  MST.py  Makefile  README.md  ScenarioGeneration.py  algostrata_isin.parquet  algostrata_name.parquet  app.py  bring_in.py  checkPython.py  dataAnalyser.py  inventory.py  jorge_algo.py  main.py  pyproject.toml  requirements.txt  settings.py  vercel.json
.chglog/: config.yml
.devcontainer/: devcontainer.json  startup.sh
.github/: dependabot.yml
.github/workflows/: book.yaml  build_and_deploy.yml  coverage.yaml  docker-test.yml  hadolint.yml  podman.yml  pre-commit.yaml  pre-commit.yml  release.yaml  release.yml  test.yaml  testing.yaml
app/: Dash_app.py  Dash_components.py  Dash_layouts.py  app.py  app_callbacks.py  app_components.py  app_layouts.py  main.py
app/data/: etoro_etfs.txt  etoro_etfs_weekly_returns_2011_2021.parquet
app/models/: CVaRmodel.py  Clustering.py  MST.py  ScenarioGeneration.py  dataAnalyser.py  main.py
assets/: custom.css
dashboard/: app_callbacks.py  app_callbacks_new.py  app_components.py  app_layouts.py  main.py
data/: ETFlist.py  all_etfs_rets_name.parquet.gzip  etf_symbols.csv  top_2000_etfs.xlsx
data_preparation/: gams_transfer.py  yahoo_data_clean.py
data_preprocessing/: gams_transfer.py  yahoo_data_clean.py  yahoo_download.py
docker/: .dockerignore  Dockerfile  Dockerfile.dockerignore
financial_data/: ETFlist.py  daily_price.parquet  etf_etoro_symbols.txt  etf_isins.py
financial_data_preprocessing/: clean_downloaded_data.py  gams_transfer.py  get_algostrata_data.py  get_yahoo_data.py  yahoo_data_clean.py
funnel/: app.py  nav.py  settings.py
funnel/assets/: custom.css
funnel/dashboard/: README.md  ai_feature.py  app_callbacks.py  app_components.py  app_layouts.py  backtest.py  lifecycle.py  nav.py  overview.py
funnel/financial_data/: all_etfs_rets.parquet.gzip
funnel/financial_data_preprocessing/: clean_downloaded_data.py  gams_transfer.py  get_algostrata_data.py  get_yahoo_data.py
funnel/lifecycleModel/: MVOlifecycleModel.py  ScenarioGeneration.py  benchmark.py  colorsss.py  glidePathCreator.py  main.py  old_glidePathCreator.py  setup_thesis.py  test.py
funnel/models/: CVaRmodel.py  CVaRtargets.py  Clustering.py  MST.py  MVOmodel.py  MVOtargets.py  ScenarioGeneration.py  main.py  (+1 more)
investment_club/: benchmarks.py  nord_and_lysa_etfs.py  nord_and_lysa_portfolios.py
k8s/: autoscale.yaml  deployment.yaml  kustomization.yaml  service.yaml
models/: CVaRmodel.py  CVaRtargets.py  Clustering.py  MST.py  MVOmodel.py  MVOtargets.py  ScenarioGeneration.py  Volatilitymodel.py  Volatilitytargets.py  dataAnalyser.py  main.py  main_new.py
pfo/: INTRODUCTION.md  README.md  SAVEYOURCODE.md
tests/: conftest.py  port_allocation_BASE.csv  port_cvar_BASE.csv  port_value_BASE.csv  targets_BASE.csv  test_1_scenario_generation.py  test_2_cvar_model.py  test_3_mvo_model.py  test_ai_feature_selection_page.py  test_app.py  test_app_layouts.py  test_backtest_page.py  test_callback.py  test_cvar_model.py  test_cvar_targets.py  test_imports.py  test_layout.py  test_lifecycle_page.py  test_logging.py  test_marketOverview.py  test_market_overview_page.py  test_mobile_page.py  test_models.py  test_mvo_model.py  test_nav.py  test_specific_import.py  test_trivial.py
(+60 files in other folders)
