[project]
name = "investment-funnel"
version = "0.0.0"
description = "Open-source testing and benchmarking plaform for asset allocation."
authors = [{name="Petr Vanek", email="abc@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dash-bootstrap-components>=2.0",
    "dash>=3.1.0",
    #"pyarrow>=18.1.0",
    "gunicorn>=23.0.0",
    #"cvxpy-base>=1.6.0",
    #"clarabel>=0.9.0",
    "ifunnel>=0.0.6",
    "pydantic>=2.10.3",
]

[project.urls]
repository = "https://github.com/VanekPetr/investment-funnel"
homepage = "https://investment-funnel.algostrata.com"

[dependency-groups]
dev = [
    "pytest-cov>=6.0.0",
    "pytest>=8.3.3",
    "pre-commit>=4.0.1",
    "ifunnel>=0.0.6",
    "ecos>=2.0.14",
    #"dash[testing]>=3.1.0",
]

[tool.ruff]
select = ["E", "F", "I"]
line-length = 120
target-version = "py310"
exclude = [
    "*__init__.py"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["funnel"]

[tool.deptry.per_rule_ignores]
DEP001 = ["gams"]
DEP002 = ["clarabel","pyarrow","cvxpy-base","gunicorn","ifunnel"]


[project.scripts]
funnel = "funnel.app:main"

[tool.deptry.package_module_name_map]
cvxpy-base = ["cvxpy"]
scikit-learn = ["sklearn"]
