[project]
name = "investment-funnel"
version = "0.0.0"
description = "Open-source testing and benchmarking plaform for asset allocation."
authors = [{name="Petr Vanek", email="petrr.vanekk@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dash-bootstrap-components>=2.0",
    "dash>=4.1.0",
    "ifunnel>=0.0.6",
    "pydantic>=2.12.5",
]

[project.urls]
repository = "https://github.com/VanekPetr/investment-funnel"
homepage = "https://investment-funnel.algostrata.com"

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
    "pytest>=9.0.3",
    "pre-commit>=4.5.1"
]

[tool.ruff]
select = ["E", "F", "I"]
line-length = 120
target-version = "py310"
exclude = [
    "*__init__.py"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["funnel"]

[project.scripts]
funnel = "funnel.app:main"

[tool.uv.sources]
ifunnel = { url = "https://files.pythonhosted.org/packages/9f/3b/b3e37ae8671999378e5ff1e721f437d27bf6f6b76c62ce9a0e3917dec7d8/ifunnel-0.0.6-py3-none-any.whl" }
